<resources>
    <string name="app_name">Tara Accessories Galore</string>
    <string name="welcome_to_the_tara_accessories_galore_app_your_one_stop_shop_for_stunning_accessories_connect_directly_to_our_instagram_page_and_explore_our_latest_collections_discover_and_shop_beautiful_pieces_effortlessly"><![CDATA[Welcome to the Tara Accessories Galore app, your one-stop shop for stunning accessories. Connect directly to our Instagram page and explore our latest collections. Discover and shop beautiful pieces effortlessly!]]></string>
    <string name="enter_instagram_id">Enter Instagram Id-</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_tara_accessories_galore">Welcome to Tara Accessories Galore</string>
    <string name="follow_us_on_instagram">Follow us on instagram</string>
    <string name="instagram">Instagram</string>
    <string name="our_store">Our Store</string>
    <string name="bio">Welcome to the Tara Accessories Galore app, your one-stop shop for stunning accessories. Connect directly to our Instagram page and explore our latest collections. Discover and shop beautiful pieces effortlessly!</string>
    <string name="buy_now">Buy Now</string>
    <string name="hamper">Hamper</string>
    <string name="buy_now1">Buy Now</string>
    <string name="joyful_blossoms_collection_necklace">Joyful Blossoms Collection Necklace</string>
    <string name="tree_of_life_chram_bracelet">Tree of Life Chram Bracelet</string>
    <string name="mystical_bow">Mystical Bow</string>
    <string name="products">Products</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
    <string name="welcome_to_tara_accessories_galore1">Welcome to Tara Accessories Galore</string>

</resources>