<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg5"
    android:padding="20dp"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:fontFamily="monospace"
            android:text="@string/our_store"
            android:textColor="#000000"
            android:textSize="25sp"

            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/bio"
            android:textColor="#000000"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/textview5"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/products"
            android:textColor="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview6"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:fontFamily="sans-serif-medium"
            android:text="@string/mystical_bow"

            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="357dp"
            android:layout_height="179dp"
            android:contentDescription="@string/todo1"
            app:srcCompat="@drawable/bow" />

        <Button
            android:id="@+id/butbow"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="86dp"
            android:backgroundTint="#947255"
            android:insetLeft="60dp"

            android:text="@string/buy_now"
            android:textAlignment="center"
            android:textColor="#0B0104" />

        <TextView
            android:id="@+id/textview7"
            android:layout_width="match_parent"
            android:layout_height="45dp"

            android:fontFamily="sans-serif-black"
            android:text="@string/tree_of_life_chram_bracelet"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="357dp"
            android:layout_height="179dp"
            android:contentDescription="@string/todo2"
            app:srcCompat="@drawable/bracelet" />

        <Button
            android:id="@+id/butbracelet"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="86dp"
            android:backgroundTint="#947255"
            android:insetLeft="60dp"

            android:text="@string/buy_now"
            android:textAlignment="center"
            android:textColor="#0B0104" />

        <TextView
            android:id="@+id/textview8"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/joyful_blossoms_collection_necklace"
android:textColor="#000000"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="357dp"
            android:layout_height="179dp"
            android:contentDescription="@string/todo3"
            app:srcCompat="@drawable/necklace" />

        <Button
            android:id="@+id/butnecklace"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="86dp"
            android:backgroundTint="#947255"
            android:insetLeft="60dp"

            android:text="@string/buy_now1"
            android:textAlignment="center"
            android:textColor="#0B0104" />

        <TextView
            android:id="@+id/textview9"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hamper"
android:textColor="#000000"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="357dp"
            android:layout_height="179dp"
            android:contentDescription="@string/todo4"
            app:srcCompat="@drawable/hamper" />

        <Button
            android:id="@+id/buthamper"
            android:layout_width="295dp"
            android:layout_height="48dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="86dp"
            android:backgroundTint="#947255"
            android:insetLeft="60dp"

            android:text="@string/buy_now"
            android:textAlignment="center"
            android:textColor="#0B0104" />


    </LinearLayout>


</ScrollView>